--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "crawler"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+anyhow = "1.0.69"
+clap = { version = "4.1.6", features = ["derive"] }
+lib-wc = "0.1.5"
+reqwest = { version = "0.11", features = ["json"] }
+scraper = "0.14.0"
+tokio = { version = "1.25.0", features = ["full"] }
+url = "2.3.1"
