--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.69"
+async-channel = "1.8.0"
 clap = { version = "4.1.6", features = ["derive"] }
-lib-wc = "0.1.5"
+lib-wc = "0.1.8"
 reqwest = { version = "0.11", features = ["json"] }
 scraper = "0.14.0"
 tokio = { version = "1.25.0", features = ["full"] }
