--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 anyhow = "1.0.69"
 async-channel = "1.8.0"
 clap = { version = "4.1.6", features = ["derive"] }
-lib-wc = "0.1.8"
+lib-wc = "0.1.14"
 reqwest = { version = "0.11", features = ["json"] }
 scraper = "0.14.0"
 tokio = { version = "1.25.0", features = ["full"] }
+tracing = "0.1.37"
+tracing-subscriber = "0.3.16"
 url = "2.3.1"
