--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.69"
 async-channel = "1.8.0"
 clap = { version = "4.1.6", features = ["derive"] }
 lib-wc = "0.1.14"
+dashmap = "5.4.0"
 reqwest = { version = "0.11", features = ["json"] }
 scraper = "0.14.0"
 tokio = { version = "1.25.0", features = ["full"] }
