--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ lib-wc = "0.1.14"
 dashmap = "5.4.0"
 reqwest = { version = "0.11", features = ["json"] }
 scraper = "0.14.0"
-tokio = { version = "1.25.0", features = ["full"] }
+tokio = { version = "1.25.0", features = ["full", "tracing"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 url = "2.3.1"
+#console-subscriber = "0.1.8"
