--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,12 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.69"
 async-channel = "1.8.0"
-async-throttle = "0.3.1"
-shutdown-async = "0.1.0"
 clap = { version = "4.1.6", features = ["derive"] }
 dashmap = { version = "5.4.0", features = ["serde"] }
 reqwest = { version = "0.11", features = ["json"] }
 scraper = "0.14.0"
 tokio = { version = "1.25.0", features = ["full", "tracing"] }
+tokio-utils = "0.1.1"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 url = "2.3.1"
